# APDFCreator

./: .gitignore  Dockerfile  README.md  doxygen-config  setup_hooks.sh
.github/workflows/: build.yml  publish-dockerimg.yml
doxygen-documentation/html/: README_8md.html  a7191b4af3323e93cc9d15916bd5d25ac83a7583be9839892aa1c145cd8a940c_8d.html  abbf7ec4c69ec900c397502abe22cb7b02b9d778ea20de2f81088c34ee7df929_8d.html  annotated.html  classDocument-members.html  classDocument.html  classDocumentPageController-members.html  classDocumentPageController.html  classDocumentPageController__coll__graph.md5  classDocumentPageController__inherit__graph.map  classDocumentToolbar-members.html  classDocumentToolbar.html  classDocumentToolbar__inherit__graph.map  classDocumentToolbar__inherit__graph.md5  classDocument__coll__graph.map  classDocument__coll__graph.md5  classDraggableTool-members.html  classDraggableTool.html  classDraggableTool__coll__graph.md5  classDraggableTool__inherit__graph.map  classFormulaEditor-members.html  classFormulaEditor.html  classFormulaEditor__coll__graph.map  classFormulaEditor__coll__graph.md5  classFormulaTool-members.html  classFormulaTool.html  classFormulaTool__coll__graph.map  classFormulaTool__coll__graph.md5  classImageTool-members.html  classImageTool.html  classImageTool__inherit__graph.map  classImageTool__inherit__graph.md5  classInputOutput-members.html  classInputOutput.html  classMainWindow-members.html  classMainWindow.html  classPageGrid-members.html  classPageGrid.html  classPageGrid__coll__graph.map  classPageGrid__coll__graph.md5  (+474 more)
doxygen-documentation/latex/: a7191b4af3323e93cc9d15916bd5d25ac83a7583be9839892aa1c145cd8a940c_8d.tex  abbf7ec4c69ec900c397502abe22cb7b02b9d778ea20de2f81088c34ee7df929_8d.tex  annotated.tex  classDocument.tex  classDocumentPageController.tex  classDocumentPageController__inherit__graph.md5  classDocumentToolbar.tex  classDocumentToolbar__inherit__graph.md5  classDocument__coll__graph.md5  classDraggableTool.tex  classDraggableTool__inherit__graph.md5  classFormulaEditor.tex  classFormulaEditor__coll__graph.md5  classFormulaTool.tex  classFormulaTool__inherit__graph.md5  classImageTool.tex  classImageTool__coll__graph.md5  classInputOutput.tex  classMainWindow.tex  classPageGrid.tex  classPageGrid__coll__graph.md5  classPageProperties.tex  classPageSetup.tex  classPageSetup__coll__graph.md5  classPaper.tex  (+193 more)
githooks/: commit-msg  pre-commit  pre-push
src/: .clang-format  .clang-tidy  CMakeLists.txt  main.cpp  resources.qrc
src/components/: documentpagecontroller.cpp  documentpagecontroller.h  documenttoolbar.cpp  documenttoolbar.h  pagegrid.cpp  pagegrid.h  pageproperties.cpp  pageproperties.h  papersizecombo.cpp  papersizecombo.h  settingsscopecombo.cpp  settingsscopecombo.h
src/components/ruler/: ruler.cpp  ruler.h  slider.cpp  slider.h
src/gui/: document.cpp  document.h  formulaeditor.cpp  formulaeditor.h  formulaeditor.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  pagesetup.cpp  pagesetup.h  pagesetup.ui  paper.cpp  paper.h
src/gui/welcomepage/: welcomepage.cpp  welcomepage.h  welcomepage.ui
src/in_out/: in_out.cpp  in_out.h
src/tools/: draggabletool.cpp  draggabletool.h  formulatool.cpp  formulatool.h  imagetool.cpp  imagetool.h  texttool.cpp  texttool.h  tooloptions.cpp  tooloptions.h
(+98 files in other folders)
